Fix: fix flicker issue

--- a/src/components/features/BlogHeader/index.scss
+++ b/src/components/features/BlogHeader/index.scss
@@ -1,22 +1,7 @@
 .blog-header {
   .info-box {
-    .hover-dark {
-      @apply hover:bg-neutral-950;
-    }
-
-    .hover-light {
-      @apply hover:bg-amber-50;
-    }
-
     a {
       @apply hover:underline;
     }
-  }
-  .dark-mode {
-    @apply bg-neutral-950;
-  }
-
-  .light-mode {
-    @apply bg-amber-50;
   }
 }
